--- a/fooldal.html
+++ b/fooldal.html
@@ -9,8 +9,12 @@
 <body>
     <div class="legfelsolec">
         <img src="images/hatternelkul.png" alt="AlmásDerelyeHotel">
-        <p>Almás Derelye Hotel</p>
     </div>
-    <div class="Menu"></div>
+    <div class="Menu">
+        <a href="fooldal.html">Főoldal</a>
+        <a href="etterem.html">Rólunk</a>
+        <a href="wellness.html">Wellness</a>
+        <a href="kapcsolat.html">Kapcsolat</a>
+    </div>
 </body>
 </html>
