--- a/fooldal.html
+++ b/fooldal.html
@@ -7,14 +7,22 @@
     <title>Főoldal - AlmásDerelye Hotel</title>
 </head>
 <body>
-    <div class="legfelsolec">
+    <div class="Navbar">
         <img src="images/hatternelkul.png" alt="AlmásDerelyeHotel">
-    </div>
-    <div class="Menu">
+        
+        <div class="navlinks">
         <a href="fooldal.html">Főoldal</a>
         <a href="etterem.html">Rólunk</a>
         <a href="wellness.html">Wellness</a>
         <a href="kapcsolat.html">Kapcsolat</a>
+        </div>        
+    </div>
+
+    <div class="nagykep">
+        <img src="images/This_has_become_202602041314.jpeg" alt="AlmásDerelye Hotel">
+    </div>
+
+    <div class="Fogadoforesz">
     </div>
 </body>
 </html>
