--- a/fooldal.html
+++ b/fooldal.html
@@ -19,10 +19,21 @@
     </div>
 
     <div class="nagykep">
-        <img src="images/This_has_become_202602041314.jpeg" alt="AlmásDerelye Hotel">
+        <img src="images/It_should_be_202602050915.jpeg" alt="AlmásDerelye Hotel">
     </div>
 
     <div class="Fogadoforesz">
+        <div class="bal">
+            <p class="balindex">Örökségünk</p>
+            <h1>Régi kőfalak, de maximális modernség!</h1>
+            <br>
+            <p class="balidezet">"Aki e kapun belép, hagyja kint a modern világ gondját."</p>
+            <br>
+            <p class="balkisebb">Fogadónk a régi angol falvak hangulatát idézi, ahol a tűz pattogása és a borospince hűvöse ad menedéket a megfáradt utazónak. Minden szobánk egyedi, kézzel faragott bútorokkal és kőburkolattal. A falak között a történelem suttog, de a kényelem és a modern szolgáltatások garantálják, hogy vendégeink minden igényét kielégítsük. Legyen szó egy romantikus hétvégéről vagy egy családi nyaralásról, nálunk mindenki megtalálja a helyét.</p>
+        </div>
+        <div class="jobb">
+            <img src="images/fogadoforesz.jpeg" alt="Hotel kép">
+        </div>
     </div>
 </body>
 </html>
