--- a/fooldal.html
+++ b/fooldal.html
@@ -35,5 +35,53 @@
             <img src="images/fogadoforesz.jpeg" alt="Hotel kép">
         </div>
     </div>
+
+    <div class="PihenoForesz">
+        <h2 class="kartya-cim">Pihenőkamrák</h2>
+        <p class="kartya-kisebb">Válasszon lakosztályt rangja szerint</p>
+        <div class="kartya-lista">
+            <div class="kartya">
+                <div class="kartya-kep">
+                    <img src="images/gnomelak.jpeg" alt="Wellness élmény">
+                </div>
+                <div class="kartya-tartalom">
+                    <h3>Vándor Kamra</h3>
+                    <p class="kicsibarna">Udvari kilátás</p>
+                    <p>Egyszerű, de nemes szállás a gyorsan továbbállóknak. Tömörfa ágy és kandalló.</p>
+                </div>
+                <div class="kartya-ar">
+                    <p><strong>24 900 Ft</strong> / éj</p>
+                </div>
+            </div>
+
+            <div class="kartya kartya-kiemelt">
+                <div class="kartya-kep">
+                    <img src="images/lovaglak.jpeg" alt="Prémium csomag">
+                </div>
+                <div class="kartya-tartalom">
+                    <h3>Lovagi terem</h3>
+                    <p class="kicsibarna">Panoráma a völgyre</p>
+                    <p>Tágas terek, medvebőr (mű) szőnyeg, privát olvasósarok a toronyban.</p>
+                </div>
+                <div class="kartya-ar">
+                    <p><strong>39 900 Ft</strong> / éj</p>
+                </div>
+            </div>
+
+            <div class="kartya">
+                <div class="kartya-kep">
+                    <img src="images/kiralylak.jpeg" alt="Családi pihenés">
+                </div>
+                <div class="kartya-tartalom">
+                    <h3>Királyi Lakosztály</h3>
+                    <p class="kicsibarna">Saját terasz & Dézsa</p>
+                    <p>A legnemesebb választás. Hatalmas baldachinos ágy és privát dézsafürdő.</p>
+                </div>
+                <div class="kartya-ar">
+                    <p><strong>29 900 Ft</strong> / éj</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
