--- a/fooldal.html
+++ b/fooldal.html
@@ -7,16 +7,27 @@
     <title>Főoldal - AlmásDerelye Hotel</title>
 </head>
 <body>
-    <div class="Navbar">
-        <img src="images/hatternelkul.png" alt="AlmásDerelyeHotel">
-        
-        <div class="navlinks">
-        <a href="fooldal.html">Főoldal</a>
-        <a href="etterem.html">Rólunk</a>
-        <a href="wellness.html">Wellness</a>
-        <a href="kapcsolat.html">Kapcsolat</a>
-        </div>        
+<nav class="navbar">
+    <div class="navbar-container">
+      <a href="#" class="logo">
+        <img src="images/hatternelkul.png" alt="Logó">
+      </a>
+
+      <input type="checkbox" id="menu-toggle" class="menu-toggle">
+      <label for="menu-toggle" class="hamburger">
+        <span></span>
+        <span></span>
+        <span></span>
+      </label>
+
+      <ul class="nav-links">
+        <li><a href="fooldal.html">Kezdőlap</a></li>
+        <li><a href="#">Rólunk</a></li>
+        <li><a href="#">Wellness</a></li>
+        <li><a href="#">Kapcsolat</a></li>
+      </ul>
     </div>
+  </nav>
 
     <div class="nagykep">
         <img src="images/It_should_be_202602050915.jpeg" alt="AlmásDerelye Hotel">
@@ -83,5 +94,21 @@
             </div>
         </div>
     </div>
+
+    <footer class="footer">
+        <div class="footer-tartalom">
+            <div class="footer-oszlop">
+                <h3>AlmásDerelye Hotel</h3>
+                <p class="footer-idezet">"Térj be hozzánk vándor, s leld meg nyugalmad e falak között."</p>
+            </div>
+            <div class="footer-oszlop">
+                <h3>Elérhetőség</h3>
+                <p>Helyszín:  1051 Óváros, Fő tér 12.</p>
+                <p>Telefon: +36 1 234 5678</p>
+                <p>Email: info@almasderelyehotel.hu</p>
+            </div>
+        </div>
+        <div class="footer-jog">© 1492 - 2024 Hotel AlmásDerelye. Minden jog fenntartva a Király nevében</div>
+    </footer>
 </body>
 </html>
