--- a/fooldal.html
+++ b/fooldal.html
@@ -53,7 +53,7 @@
         <div class="kartya-lista">
             <div class="kartya">
                 <div class="kartya-kep">
-                    <img src="images/gnomelak.jpeg" alt="Wellness élmény">
+                    <img src="images/gnomelak.jpeg" alt="Vándor Kamra">
                 </div>
                 <div class="kartya-tartalom">
                     <h3>Vándor Kamra</h3>
@@ -67,7 +67,7 @@
 
             <div class="kartya kartya-kiemelt">
                 <div class="kartya-kep">
-                    <img src="images/lovaglak.jpeg" alt="Prémium csomag">
+                    <img src="images/lovaglak.jpeg" alt="Lovagi terem">
                 </div>
                 <div class="kartya-tartalom">
                     <h3>Lovagi terem</h3>
@@ -81,7 +81,7 @@
 
             <div class="kartya">
                 <div class="kartya-kep">
-                    <img src="images/kiralylak.jpeg" alt="Családi pihenés">
+                    <img src="images/kiralylak.jpeg" alt="Királyi Lakosztály">
                 </div>
                 <div class="kartya-tartalom">
                     <h3>Királyi Lakosztály</h3>
