--- a/fooldal.html
+++ b/fooldal.html
@@ -29,11 +29,11 @@
       </ul>
     </div>
   </nav>
-
+      <!-- Nagykép részleg -->
     <div class="nagykep">
         <img src="images/It_should_be_202602050915.jpeg" alt="AlmásDerelye Hotel">
     </div>
-
+        <!-- Történet részleg -->
     <div class="Fogadoforesz">
         <div class="bal">
             <p class="balindex">Örökségünk</p>
@@ -48,10 +48,13 @@
         </div>
     </div>
 
+        <!-- HÁROM KÁRTYA -->
+
     <div class="PihenoForesz">
         <h2 class="kartya-cim">Pihenőkamrák</h2>
         <p class="kartya-kisebb">Válasszon lakosztályt rangja szerint</p>
         <div class="kartya-lista">
+                <!-- bal oldali -->
             <div class="kartya">
                 <div class="kartya-kep">
                     <img src="images/gnomelak.jpeg" alt="Vándor Kamra">
@@ -65,7 +68,7 @@
                     <p><strong>24 900 Ft</strong> / éj</p>
                 </div>
             </div>
-
+                <!-- középső fő -->
             <div class="kartya kartya-kiemelt">
                 <div class="kartya-kep">
                     <img src="images/lovaglak.jpeg" alt="Lovagi terem">
@@ -79,7 +82,7 @@
                     <p><strong>39 900 Ft</strong> / éj</p>
                 </div>
             </div>
-
+                 <!-- jobb oldali -->
             <div class="kartya">
                 <div class="kartya-kep">
                     <img src="images/kiralylak.jpeg" alt="Királyi Lakosztály">
@@ -95,6 +98,38 @@
             </div>
         </div>
     </div>
+
+    <!-- KOCKÁS JOBB-BAL RÉSZLEG -->
+
+    <div class="Kocka">
+        <div class="kocka fenti">
+            <div class="kocka bal-kep">
+                <img src="images/dezsa.jpeg" alt="Medence">
+            </div>
+            <div class="kocka jobb-szoveg">
+                <p>Gyógyulás</p>
+                <h1>A Fürdőház</h1>
+                <p>Ahol a gyógynövények és a forró víz ereje mossa le az út porát.</p>
+                <ul>
+                    <li>🌿 Gyógynövényes gőzkamra</li>
+                    <li>💧 Forróvizes dézsafürdő</li>
+                    <li>🔥 Kandallóval fűtött pihenő</li>
+                </ul>
+            </div>
+        </div>
+        <div class="kocka also">
+            <div class="kocka bal-szoveg">
+                <p>Lakoma</p>
+                <h1>Királyi Taverna</h1>
+                <p>Vadhúsok, kemencében sült kenyér és a környék legjobb borai. Hosszú faasztalok, ahol mindenki barátként koccint.</p>
+            </div>
+            <div class="kocka jobb-kep">
+                <img src="images/etterem.jpeg" alt="Medence">
+            </div>
+        </div>
+    </div>
+
+    <!-- FOOTER RÉSZLEG -->
 
     <footer class="footer">
         <div class="footer-tartalom">
