--- a/fooldal.html
+++ b/fooldal.html
@@ -23,7 +23,7 @@
 
       <ul class="nav-links">
         <li><a href="fooldal.html">Kezdőlap</a></li>
-        <li><a href="#">Rólunk</a></li>
+        <li><a href="rolunk.html">Rólunk</a></li>
         <li><a href="#">Wellness</a></li>
         <li><a href="#">Kapcsolat</a></li>
       </ul>
