--- a/rolunk.html
+++ b/rolunk.html
@@ -29,6 +29,24 @@
           </ul>
         </div>
       </nav>
+        <!-- Cim részleg -->
+      <div class="CimSzal">
+        <h1>A Falak Története</h1>
+        <p>"Nem építettünk újat, csupán leporoltuk a régit."</p>
+    </div>
+
+        <!-- TÖRTÉNET -->
+    <div class="TortenetSzal">
+        <div class="TortenetSzal-Kep">
+            <img src="images/terkep.jpeg" alt="Térkép"> 
+            <p> Az eredeti alaprajz (restaurált)</p>
+        </div>
+        <div class="TortenetSzal-Szoveg">
+            <p>Az AlmásDerelye Hotel egy régi angol faluban található, amelynek története több évszázadra nyúlik vissza. Az épület eredetileg egy középkori fogadó volt, amely a helyi utazók és kereskedők</p>
+
+        </div>
+    </div>
+
 
       <!-- FOOTER RÉSZLEG -->
 
