--- a/rolunk.html
+++ b/rolunk.html
@@ -39,14 +39,66 @@
     <div class="TortenetSzal">
         <div class="TortenetSzal-Kep">
             <img src="images/terkep.jpeg" alt="Térkép"> 
-            <p> Az eredeti alaprajz (restaurált)</p>
+            <p class="Kep-alairas"> Az eredeti alaprajz (restaurált)</p>
         </div>
         <div class="TortenetSzal-Szoveg">
-            <p>Az AlmásDerelye Hotel egy régi angol faluban található, amelynek története több évszázadra nyúlik vissza. Az épület eredetileg egy középkori fogadó volt, amely a helyi utazók és kereskedők</p>
-
+          <h1>1942 Tele</h1>
+          <p>A mikor az első alapkövet letették, Kolumbusz épp csak elindult, hogy eltévedjen az óceánon. E falak azonban stabilan álltak. Kezdetben királyi vadászházként szolgált, ahol a nemesek pihenték ki a szarvasűzés fáradalmait. A legenda szerint maga Mátyás király is megfordult itt (bár álruhában, így bizonyítékunk nincs, de a marketingnek jót tesz).</p>
+          <br>
+          <p>Az évszázadok során volt kolostor, postaállomás, és egy rövid ideig – amit nem szívesen reklámozunk – börtön is. A jelenlegi tulajdonosok 2010-ben találtak rá a romokra, és döntöttek úgy: nem gipszkartont húznak fel, hanem visszaadják a kő méltóságát.</p>
         </div>
     </div>
 
+      <!--Felszolgálóink-->
+
+      <div class="Felszolgalok">
+        <h2 class="Felszolgalok-cim">A Ház Népe</h2>
+        <p class="Felszolgalok-kisebb">Akik a tűzre és a rendre vigyáznak</p>
+        <div class="Felszolgalok-kartya-lista">
+                <!--Első alkalmazott-->
+        <div class="Felszolgalok-kartya">
+            <div class="kartya-kep">
+                <img src="images/filler.jpg" alt="">
+            </div>
+            <div class="kartya-tartalom">
+                <h3>Név</h3>
+                <p class="kartya-kicsi">Szaka</p>
+                <p class="kartya-leiras">
+                    Egyszerű, de nemes szállás a gyorsan továbbállóknak. 
+                    Tömörfa ágy és kandalló.
+                </p>
+            </div>
+        </div>
+                  <!--Második alkalmazott-->
+        <div class="Felszolgalok-kartya">
+          <div class="kartya-kep">
+              <img src="images/filler.jpg" alt="">
+          </div>
+          <div class="kartya-tartalom">
+              <h3>Név</h3>
+              <p class="kartya-kicsi">Szaka</p>
+              <p class="kartya-leiras">
+                  Egyszerű, de nemes szállás a gyorsan továbbállóknak. 
+                  Tömörfa ágy és kandalló.
+              </p>
+          </div>
+        </div>
+                  <!--Harmadik alkalmazott-->
+        <div class="Felszolgalok-kartya">
+          <div class="kartya-kep">
+              <img src="images/filler.jpg" alt="">
+          </div>
+          <div class="kartya-tartalom">
+              <h3>Név</h3>
+              <p class="kartya-kicsi">Szaka</p>
+              <p class="kartya-leiras">
+                  Egyszerű, de nemes szállás a gyorsan továbbállóknak. 
+                  Tömörfa ágy és kandalló.
+              </p>
+          </div>
+        </div>
+        </div>
+    </div>
 
       <!-- FOOTER RÉSZLEG -->
 
