--- a/rolunk.html
+++ b/rolunk.html
@@ -58,48 +58,59 @@
                 <!--Első alkalmazott-->
         <div class="Felszolgalok-kartya">
             <div class="kartya-kep">
-                <img src="images/filler.jpg" alt="">
+                <img src="images/Szg.jpeg" alt="">
             </div>
             <div class="kartya-tartalom">
-                <h3>Név</h3>
-                <p class="kartya-kicsi">Szaka</p>
+                <h3>Szőcs Gábor</h3>
+                <p class="kartya-kicsi">A Fogadós</p>
                 <p class="kartya-leiras">
-                    Egyszerű, de nemes szállás a gyorsan továbbállóknak. 
-                    Tömörfa ágy és kandalló.
+                  Szigorú, de igazságos. Ha nem köszönsz illendően, kevesebb húst kapsz a vacsoránál.
                 </p>
             </div>
         </div>
                   <!--Második alkalmazott-->
         <div class="Felszolgalok-kartya">
           <div class="kartya-kep">
-              <img src="images/filler.jpg" alt="">
+              <img src="images/jimi.jpeg" alt="">
           </div>
           <div class="kartya-tartalom">
-              <h3>Név</h3>
-              <p class="kartya-kicsi">Szaka</p>
+              <h3>Varga József (Jimmy)</h3>
+              <p class="kartya-kicsi">Főszakács</p>
               <p class="kartya-leiras">
-                  Egyszerű, de nemes szállás a gyorsan továbbállóknak. 
-                  Tömörfa ágy és kandalló.
+                Receptjeit hét lakat alatt őrzi. A vadmalac sütése nála nem munka, hanem szertartás.
               </p>
           </div>
         </div>
                   <!--Harmadik alkalmazott-->
         <div class="Felszolgalok-kartya">
           <div class="kartya-kep">
-              <img src="images/filler.jpg" alt="">
+              <img src="images/FZ.jpeg" alt="">
           </div>
           <div class="kartya-tartalom">
-              <h3>Név</h3>
-              <p class="kartya-kicsi">Szaka</p>
+              <h3>Foki Zoltán</h3>
+              <p class="kartya-kicsi">Pincemester</p>
               <p class="kartya-leiras">
-                  Egyszerű, de nemes szállás a gyorsan továbbállóknak. 
-                  Tömörfa ágy és kandalló.
+                Ismeri a vidék összes szőlőtőkéjét. A borospince kulcsa mindig az övén csörög.
               </p>
           </div>
         </div>
         </div>
     </div>
 
+      <!-- Ház szabályai -->
+    <div class="HazSzabalyaiFo">
+      <div class="HazSzabalyai">
+        <h3 class="HazSzabalyai-cim">Ház Törvényei</h3>
+        <h2><span class="szam">I.</span> A technológia kint marad</h2>
+        <p>Bár van elektromosság (sajnos), kérjük a varázsdobozokat (mobiltelefon) a közösségi terekben mellőzni.</p>
+        <br>
+        <h2><span class="szam">II.</span> Az étel szent.</h2>
+        <p>Aki az asztalnál politizál, az mosogat.</p>
+        <br>
+        <h2><span class="szam">III.</span> Nyugalom</h2>
+        <p>A falak vastagok, de a tisztelet vékony jégen jár. Ne zavard mások pihenését hangos szóval.</p>
+      </div>
+    </div>
       <!-- FOOTER RÉSZLEG -->
 
     <footer class="footer">
