--- a/fooldal.html
+++ b/fooldal.html
@@ -31,7 +31,7 @@
   </nav>
       <!-- Nagykép részleg -->
     <div class="nagykep">
-        <img src="images/It_should_be_202602050915.jpeg" alt="AlmásDerelye Hotel">
+        <img src="images/Fogadokivul.jpeg" alt="AlmásDerelye Hotel">
     </div>
         <!-- Történet részleg -->
     <div class="Fogadoforesz">
