--- a/rolunk.html
+++ b/rolunk.html
@@ -43,9 +43,13 @@
         </div>
         <div class="TortenetSzal-Szoveg">
           <h1>1942 Tele</h1>
-          <p>A mikor az első alapkövet letették, Kolumbusz épp csak elindult, hogy eltévedjen az óceánon. E falak azonban stabilan álltak. Kezdetben királyi vadászházként szolgált, ahol a nemesek pihenték ki a szarvasűzés fáradalmait. A legenda szerint maga Mátyás király is megfordult itt (bár álruhában, így bizonyítékunk nincs, de a marketingnek jót tesz).</p>
+          <p class="Szoveg-mese">A mikor az első alapkövet letették, Kolumbusz épp csak elindult, hogy eltévedjen az óceánon. E falak azonban stabilan álltak. Kezdetben királyi vadászházként szolgált, ahol a nemesek pihenték ki a szarvasűzés fáradalmait. A legenda szerint maga Mátyás király is megfordult itt (bár álruhában, így bizonyítékunk nincs, de a marketingnek jót tesz).</p>
           <br>
-          <p>Az évszázadok során volt kolostor, postaállomás, és egy rövid ideig – amit nem szívesen reklámozunk – börtön is. A jelenlegi tulajdonosok 2010-ben találtak rá a romokra, és döntöttek úgy: nem gipszkartont húznak fel, hanem visszaadják a kő méltóságát.</p>
+          <p class="Szoveg-mese">Az évszázadok során volt kolostor, postaállomás, és egy rövid ideig – amit nem szívesen reklámozunk – börtön is. A jelenlegi tulajdonosok 2010-ben találtak rá a romokra, és döntöttek úgy: nem gipszkartont húznak fel, hanem visszaadják a kő méltóságát.</p>
+
+          <div class="TortenetSzal-idezet">
+            <p>"Egy hely, ahol a történelem nem csak múzeumi tárgy, hanem élő valóság."</p>
+          </div>
         </div>
     </div>
 
