--- a/fooldal.html
+++ b/fooldal.html
@@ -26,6 +26,7 @@
         <li><a href="fooldal.html">Kezdőlap</a></li>
         <li><a href="rolunk.html">Rólunk</a></li>
         <li><a href="#">Wellness</a></li>
+        <li><a href="ajanlatok.html">Ajánlatok</a></li>
         <li><a href="#">Kapcsolat</a></li>
       </ul>
     </div>
