--- a/rolunk.html
+++ b/rolunk.html
@@ -64,10 +64,10 @@
                 <!--Első alkalmazott-->
         <div class="Felszolgalok-kartya">
             <div class="kartya-kep">
-                <img src="images/Szg.jpeg" alt="">
+                <img src="images/fogados.jpeg" alt="">
             </div>
             <div class="kartya-tartalom">
-                <h3>Szőcs Gábor</h3>
+                <h3>Vargha Gellért</h3>
                 <p class="kartya-kicsi">A Fogadós</p>
                 <p class="kartya-leiras">
                   Szigorú, de igazságos. Ha nem köszönsz illendően, kevesebb húst kapsz a vacsoránál.
@@ -77,10 +77,10 @@
                   <!--Második alkalmazott-->
         <div class="Felszolgalok-kartya">
           <div class="kartya-kep">
-              <img src="images/jimi.jpeg" alt="">
+              <img src="images/sef.jpeg" alt="">
           </div>
           <div class="kartya-tartalom">
-              <h3>Varga József (Jimmy)</h3>
+              <h3>Kormos Antal</h3>
               <p class="kartya-kicsi">Főszakács</p>
               <p class="kartya-leiras">
                 Receptjeit hét lakat alatt őrzi. A vadmalac sütése nála nem munka, hanem szertartás.
@@ -90,10 +90,10 @@
                   <!--Harmadik alkalmazott-->
         <div class="Felszolgalok-kartya">
           <div class="kartya-kep">
-              <img src="images/FZ.jpeg" alt="">
+              <img src="images/borasz.jpeg" alt="">
           </div>
           <div class="kartya-tartalom">
-              <h3>Foki Zoltán</h3>
+              <h3>Hollósi Sebestyén</h3>
               <p class="kartya-kicsi">Pincemester</p>
               <p class="kartya-leiras">
                 Ismeri a vidék összes szőlőtőkéjét. A borospince kulcsa mindig az övén csörög.
