--- a/ajanlatok.html
+++ b/ajanlatok.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/alap.css">
     <link rel="stylesheet" href="css/ajanlatok.css">
-    <title>Főoldal - AlmásDerelye Hotel</title>
+    <title>Ajánlatok - AlmásDerelye Hotel</title>
 </head>
 <body>
 <nav class="navbar">
