--- a/ajanlatok.html
+++ b/ajanlatok.html
@@ -64,6 +64,7 @@
             <!-- középső fő -->
         <div class="kartya kartya-kiemelt">
             <div class="kartya-kep">
+                <p class="elokelo">Legelőkelőbb</p>
                 <img src="images/lovaglak.jpeg" alt="Lovagi terem">
             </div>
             <div class="kartya-tartalom">
@@ -162,7 +163,14 @@
         </div>
     </div>
 </div>
+    <!-- Egyedi Ajánlat -->
 
+    <div class="EgyediAjanlat">
+        <h2>Nem találta meg, amit keres?</h2>
+        <p>A Fogadós nyitott a különleges egyezségekre is. Küldjön hollót, vagy használja az "elektronikus levelezés" nevű boszorkányságot, és személyre szabott ajánlatot kovácsolunk Önnek.</p>
+        <button type="button" class="EgyediAjanlat-gomb">Egyedi Ajánlatot Kérek</button>
+
+    </div>
 
       <!-- FOOTER RÉSZLEG -->
 
